infrastructure/02-ecs-alb.yml
Parameters:
  ClusterStack:
    Type: String

  HostnameAPI:
    Type: String

  HostnameWeb:
    Type: String

Resources:

  SecurityGroupALB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${AWS::StackName}-alb HTTP from anywhere
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
      VpcId:
        Fn::ImportValue: !Sub "${ClusterStack}::VPC"

  SecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Fn::ImportValue: !Sub "${ClusterStack}::SecurityGroup"
      SourceSecurityGroupId: !Ref SecurityGroupALB
      IpProtocol: tcp
      FromPort: 1
      ToPort: 65535

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Subnets:
        Fn::Split:
          - ","
          - Fn::ImportValue: !Sub "${ClusterStack}::Subnets"
      SecurityGroups:
        - !Ref SecurityGroupALB

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: LoadBalancer
    Properties:
      VpcId:
        Fn::ImportValue: !Sub "${ClusterStack}::VPC"
      Port: 80
      Protocol: HTTP
      Matcher:
        HttpCode: 200
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /health-alb
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 5
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 30

  TargetGroupWeb:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: LoadBalancer
    Properties:
      VpcId:
        Fn::ImportValue: !Sub "${ClusterStack}::VPC"
      Port: 80
      Protocol: HTTP
      Matcher:
        HttpCode: 200
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /health-alb
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 5
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 30

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn:
      - LoadBalancer
      - TargetGroup
      - TargetGroupWeb
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

  ListenerRuleAPI:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref LoadBalancerListener
      Priority: 2
      Conditions:
        - Field: host-header
          Values:
            - !Ref HostnameAPI
      Actions:
        - TargetGroupArn: !Ref TargetGroup
          Type: forward

  ListenerRuleWeb:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref LoadBalancerListener
      Priority: 3
      Conditions:
        - Field: host-header
          Values:
            - !Ref HostnameWeb
      Actions:
        - TargetGroupArn: !Ref TargetGroupWeb
          Type: forward

Outputs:
  TargetGroup:
    Description: The ALB TargetGroup for the service
    Value: !Ref TargetGroup
    Export:
      Name: !Sub "${AWS::StackName}::TargetGroup"
  TargetGroupWeb:
      Description: The ALB TargetGroupWeb for the service
      Value: !Ref TargetGroupWeb
      Export:
        Name: !Sub "${AWS::StackName}::TargetGroupWeb"
